Add some GC tuning flags